--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,36 @@
     <script src="./bundle.js" defer></script>
   </head>
   <body>
-    <div id="map"></div>
+    <div id="header"></div>
+
+    <div id="main-page">
+      <div id="map"></div>
+
+      <div id="right-menu">
+          <div id="add-marker">
+            <p>Hotels</p>
+            <p><select></select><button>x</button></p>
+            <p>Restaurants</p>
+            <p><select></select><button>x</button></p>
+            <p>Things To Do</p>
+            <p><select></select><button>x</button></p>
+          </div>
+        <div id="itinerary-box">
+          <div id="itinerary-title">
+            <p>Itinerary:</p>
+          </div>
+          <div id="itinerary-schedule">
+              <p>My Hotel:</p>
+              <li>PLACEHOLDER TEXT<button>x</button></li>
+              <p>My Restaurants:</p>
+              <li>PLACEHOLDER TEXT<button>x</button></li>
+              <p>My Activities</p>
+              <li>PLACEHOLDER TEXT<button>x</button></li>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
